--- a/Rock-Paper-Scissors/Rock-Paper-Scissors/Views/Home/Index.cshtml
+++ b/Rock-Paper-Scissors/Rock-Paper-Scissors/Views/Home/Index.cshtml
@@ -1,8 +1,74 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Rock Paper Scissors</title>
+    <style>
+        .center {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+        .choice {
+            width: 150px;
+            height: 150px;
+            margin: 10px;
+        }
+
+        .selected {
+            border: 2px solid blue;
+        }
+
+        .result {
+            font-size: 24px;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="center">
+        <div>
+            <img id="rock" class="choice" src="~/css/rock.png" onclick="selectChoice('rock')" />
+            <img id="paper" class="choice" src="~/css/paper.png" onclick="selectChoice('paper')" />
+            <img id="scissors" class="choice" src="~/css/scissor.png" onclick="selectChoice('scissors')" />
+        </div>
+        <br />
+        <input type="button" value="Play" onclick="play()" />
+        <br />
+        <br />
+        <div id="result"></div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        function selectChoice(choice) {
+            $(".choice").removeClass("selected");
+            $("#" + choice).addClass("selected");
+        }
+
+        function play() {
+            var userChoice = $(".selected").attr("id");
+            $.ajax({
+                type: "POST",
+                url: "/Home/Play",
+                data: JSON.stringify({ choice: userChoice }),
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (result) {
+                    $("#result").html(
+                        "<img class='choice' src='" + result.userChoice + ".png' />" +
+                        "<img class='choice' src='" + result.serverChoice + ".png' />" +
+                        "<br />" + result.message
+                    );
+                },
+                error: function (xhr, textStatus, errorThrown) {
+                    alert("Error: " + errorThrown);
+                }
+            });
+        }
+    </script>
+</body>
+</html>
