--- a/Rock-Paper-Scissors/Rock-Paper-Scissors/Views/Home/Index.cshtml
+++ b/Rock-Paper-Scissors/Rock-Paper-Scissors/Views/Home/Index.cshtml
@@ -1,74 +1,15 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewBag.Title = "Home";
 }
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Rock Paper Scissors</title>
-    <style>
-        .center {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
 
-        .choice {
-            width: 150px;
-            height: 150px;
-            margin: 10px;
-        }
+<div class="container text-center">
+    <form asp-controller="COption" asp-action="Play" method="get">
+        <button type="submit" class="btn btn-outline-danger btn-lg">Player vs Computer</button>
 
-        .selected {
-            border: 2px solid blue;
-        }
+    </form>
+    <form asp-controller="COption" asp-action="CompVsComp">
+        <button type="submit" class="btn btn-outline-danger btn-lg">Computer vs Computer</button>
 
-        .result {
-            font-size: 24px;
-            margin-top: 20px;
-        }
-    </style>
-</head>
-<body>
-    <div class="center">
-        <div>
-            <img id="rock" class="choice" src="~/css/rock.png" onclick="selectChoice('rock')" />
-            <img id="paper" class="choice" src="~/css/paper.png" onclick="selectChoice('paper')" />
-            <img id="scissors" class="choice" src="~/css/scissor.png" onclick="selectChoice('scissors')" />
-        </div>
-        <br />
-        <input type="button" value="Play" onclick="play()" />
-        <br />
-        <br />
-        <div id="result"></div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        function selectChoice(choice) {
-            $(".choice").removeClass("selected");
-            $("#" + choice).addClass("selected");
-        }
+    </form>
 
-        function play() {
-            var userChoice = $(".selected").attr("id");
-            $.ajax({
-                type: "POST",
-                url: "/Home/Play",
-                data: JSON.stringify({ choice: userChoice }),
-                contentType: "application/json; charset=utf-8",
-                dataType: "json",
-                success: function (result) {
-                    $("#result").html(
-                        "<img class='choice' src='" + result.userChoice + ".png' />" +
-                        "<img class='choice' src='" + result.serverChoice + ".png' />" +
-                        "<br />" + result.message
-                    );
-                },
-                error: function (xhr, textStatus, errorThrown) {
-                    alert("Error: " + errorThrown);
-                }
-            });
-        }
-    </script>
-</body>
-</html>
+</div>
